Added last picture of results
Added a picture to help show more results in terms of the file structure. Also updated the script to not be name specific, and to just leave a spot for the author's name.

--- a/index.html
+++ b/index.html
@@ -361,9 +361,18 @@ alt="The index.html page in a browser, opened by the script." />
 <figcaption aria-hidden="true"><em>The index.html page in a browser,
 opened by the script.</em></figcaption>
 </figure>
+<p>You will also have the following VSCode window open, showing the
+entire project and it’s structure.</p>
+<figure>
+<img src="./src/images/VSCodeOutput.png"
+alt="VSCode open, showing the project structure." />
+<figcaption aria-hidden="true"><em>VSCode open, showing the project
+structure.</em></figcaption>
+</figure>
 <p>You can now start working on your project by editing the files within
 this directory. This can include adding content in the webpage, adding
-images, styles, and more! You can see your results in the browser by
+images, styles, and more! As shown in the above output, there is even a
+spot for your name on Line 6! You can see your results in the browser by
 refreshing the page that was opened, the <code>index.html</code>
 file.</p>
 <p>Happy Coding!</p>
