Clarified instructions on git push
git push needs to be done in the correct directory, so the instructions were clarified.

--- a/index.html
+++ b/index.html
@@ -304,7 +304,10 @@ run the following command:</p>
 <code>remoteGitRepo</code>, the following command can be used:</p>
 <pre><code>bash web_boiler.sh projectName remoteGitRepo</code></pre>
 <p>You can then push the repository to GitHub with the following
-command. This command must be done seperately due to proxy issues.</p>
+command. This command must be done seperately due to proxy issues. This
+command must be executed in the terminal, whilst in your new project’s
+directory, which can be done in VSCode’s terminal once the new project
+loads.</p>
 <pre><code>git push -u origin main</code></pre>
 <p>Example:</p>
 <pre><code>bash web_boiler.sh practice-website https://github.com/GeorgeCrochiere/test-repo.git</code></pre></li>
@@ -343,7 +346,10 @@ run the following command:</p>
 <code>remoteGitRepo</code>, the following command can be used:</p>
 <pre><code>shell web_boiler.sh projectName remoteGitRepo</code></pre>
 <p>You can then push the repository to GitHub with the following
-command. This command must be done seperately due to proxy issues.</p>
+command. This command must be done seperately due to proxy issues. This
+command must be executed in the terminal, whilst in your new project’s
+directory, which can be done in VSCode’s terminal once the new project
+loads.</p>
 <pre><code>git push -u origin main</code></pre>
 <p>Example:</p>
 <pre><code>shell web_boiler.sh practice-website https://github.com/GeorgeCrochiere/test-repo.git</code></pre></li>
