Added "Download" Link
Added a link to bring the user to a download page to get the shell script.

--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@ ensure VSCode is fully installed.</p>
 <p>Follow the proceeding steps to install the script. These steps work
 for both the Windows and Linux operating systems.</p>
 <ol type="1">
-<li>Download the shell file <code>web_boilder.sh</code> and locate it on
-your system.</li>
+<li><a href="https://github.com/GeorgeCrochiere/comm429-devblog1-cli-script/blob/main/web_boiler.sh">Download</a>
+the shell file <code>web_boilder.sh</code> and locate it on your
+system.</li>
 <li>Place the shell script in the projects folder as specified in the
 <strong>Prerequisites</strong> section</li>
 </ol>
